# letter-animation

./: .gitignore  HAMILTONIAN_TESTING.md  README.md  README_SD3_SLERP.md  app_sd3_slerp.py  cog.yaml  predict.py  pyproject.toml
.github/workflows/: push-to-replicate.yml  test-build.yml  test-sd3-slerp.yml
scripts/: README.md  compare_methods.py  download_model.py  hamiltonian_dynamics.py  instanton_path.py  test_concepts.py  test_hamiltonian.py  test_hamiltonian_mock.py
