[project]
name = "letter-animation"
version = "0.1.0"
description = "Scripts for diffusion model analysis using Hamiltonian dynamics and instanton paths"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.21.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "huggingface-hub>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
